--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <button id="addProductBtn" class="add-product-btn">
+            <button id="addProductBtn" class="add-product-btn" type="button">
                 <span class="material-icons-sharp">add</span>
                 Add New Product
             </button>
@@ -160,9 +160,6 @@
                     <!-- Table content will be populated by JavaScript -->
                 </tbody>
             </table>
-            <div class="pagination" id="pagination">
-                <!-- Pagination will be populated by JavaScript -->
-            </div>
         </div>
         
         <div class="form-container">
