--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <aside>
             <div class="toggle">
                 <div class="logo">
-                    <img src="images/logo.jpg" >
+                   
+                 <img src="images/lllogo.png" class="light-logo" alt="Logo">
+                 <img src="images/lllogo.png" class="dark-logo" alt="Logo">
+                    
                     <h2>Den<span class="danger">tic</span></h2>
                 </div>
                 <div class="close" id="close-btn">
